packages/core/secrets/vault/sources/additional/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: vault-ingress
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`vault.{§ .config.domain §}`)
          services:
              - kind: Service
                name: vault
                port: 8200
