packages/core/secrets/vault/sources/additional/NetworkPolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vault-db
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: vault-postgres
  ingress:
    # Allow receiving messages from the Vault
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "5432"
    # Allow receiving control commands from the cloudnative-pg controller
    - fromEndpoints:
        - matchLabels:
            name: cloudnative-pg
            io.kubernetes.pod.namespace: mows-core-db-postgres
      toPorts:
        - ports:
            - port: "8000"
  egress:
    # Allow sending messages to Kubernetes API
    - toEntities:
      - kube-apiserver
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    # Allow receiving messages from everyone in the cluster
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8200"
  egress:
    - toEntities:
        - kube-apiserver
    # Allow sending messages to the Database
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: vault-postgres
      toPorts:
        - ports:
            - port: "5432"
    # Allow sending messages to the Kubernetes DNS Server
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vault-resource-controller
spec:
  endpointSelector:
    matchLabels:
      app: vault-resource-controller
  ingress:
    # Allow receiving messages from Kubernetes API
    - fromEntities:
        - kube-apiserver
  egress:
    # Allow sending messages to Kubernetes API
    - toEntities:
        - kube-apiserver
    # Allow sending messages to Vault API
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8200"
    # Allow sending messages to the Kubernetes DNS Server
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
    # Allow sending messages to the traces collector
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jaeger
            io.kubernetes.pod.namespace: mows-core-tracing
      toPorts:
        - ports:
            - port: "4317"
